unpackaged/main/default/objects/nbavs__Insight_Rating__c/nbavs__Insight_Rating__c.object-meta.xml
<CustomObject>
    <label>Insight Rating</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Insight Rating Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insight Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>