unpackaged/main/default/objects/nbavs__Insight_Rating__c/fields/nbavs__Insights__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Insights__c</fullName>
    <label>Insights</label>
    <referenceTo>nbavs__Insights__c</referenceTo>
    <relationshipLabel>Insight Ratings</relationshipLabel>
    <relationshipName>Insight_Ratings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>