unpackaged/main/default/objects/nbavs__Insight_Rating__c/fields/nbavs__Natterbox_User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Natterbox_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Natterbox User</label>
    <referenceTo>nbavs__User__c</referenceTo>
    <relationshipLabel>Insight Ratings</relationshipLabel>
    <relationshipName>Insight_Ratings</relationshipName>
    <type>Lookup</type>
</CustomField>