unpackaged/main/default/objects/nbavs__Insight_Rating__c/fields/nbavs__Rating_Notes__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Rating_Notes__c</fullName>
    <label>Rating Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>