unpackaged/main/default/objects/nbavs__Insight_Rating__c/fields/nbavs__Rating_Score__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Rating_Score__c</fullName>
    <label>Rating Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>