unpackaged/main/default/objects/nbavs__Insight_Rating__c/fields/nbavs__Rating_Type__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Rating_Type__c</fullName>
    <label>Rating Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call Quality</fullName>
            </value>
            <value>
                <fullName>Customer Experience</fullName>
            </value>
            <value>
                <fullName>Agent Knowledge</fullName>
            </value>
            <value>
                <fullName>Politeness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>